# for_some_people_in_mylife

./: CMakeLists.txt  README.md  cmakepredefine.cmake
cmake/: compile.cmake  include.cmake  make_all.sh
cmake/bitwide/: bitwide_32.cmake  bitwide_64.cmake
cmake/compiler/: compiler_clang.cmake  compiler_gcc-last.cmake  compiler_scan-build.cmake  compiler_strictly.cmake
cmake/include/: include_xx.cmake
cmake/project/: project_asan.cmake  project_csb.cmake  project_ut32cov.cmake  project_ut64cov.cmake
include/poj/: forg_1061.h
publish/: README.md
scripts/: analyse-gitmerge.sh  build  build.sh
src/: CMakeLists.txt
src/poj/: CMakeLists.txt
src/poj/1061/: CMakeLists.txt  forg_1061.cpp
test/: CMakeLists.txt  test_main.cpp
test/poj/: CMakeLists.txt  test_forg_1061.cpp
